objects/ssot__AiAgentSessionParticipant__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AiAgentApiName__c</fullName>
        <label>AI Agent Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentSessionId__c</fullName>
        <label>AI Agent Session</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentSessionParticipantRole__c</fullName>
        <label>AI Agent Session Participant Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentTemplateApiName__c</fullName>
        <label>AI Agent Template Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentType__c</fullName>
        <label>AI Agent Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentVersionApiName__c</fullName>
        <label>AI Agent Version Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndTimestamp__c</fullName>
        <label>End Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>AI Agent Session Participant Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantAttributeText__c</fullName>
        <label>Participant Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantObject__c</fullName>
        <label>Participant Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartTimestamp__c</fullName>
        <label>Start Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1744306678523_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentSessionParticipant_AiAgentSes_rel</label>
        <referenceTo>ssot__AiAgentSession__dlm</referenceTo>
        <relationshipLabel>AiAgentSessionParticipant_AiAgentSes_rel</relationshipLabel>
        <relationshipName>rel_1744306678523_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1744306683005_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentSessionParticipant_Individual_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>AiAgentSessionParticipant_Individual_rel</relationshipLabel>
        <relationshipName>rel_1744306683005_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>